ui/scss/component/_main.scss
/* ... */
.card__title-section--body-list {
  display: unset !important;
  // width: 100%;
  div {
    flex: auto;
  }

  @media (max-width: $breakpoint-small) {
    .card__title {
      width: 100%;
    }
  }
}

.main--upcoming {
  @media (max-width: $breakpoint-small) {
    padding: var(--spacing-xs);
    flex-direction: column;
    padding-top: 0;
  }
}

.main--theater-mode {
  padding-left: 0;
  padding-right: 0;
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  width: 100vw;
  max-width: none;

  > :first-child {
    margin-right: 0;
  }

  .file-page__info {
    padding: 0 var(--spacing-m);
    margin-top: var(--spacing-m);
    max-width: var(--page-max-width--filepage);
    display: flex;
    flex-direction: column;
    margin-left: auto;
    margin-right: auto;
  }

  .file-page__recommended {
    @media (max-width: $breakpoint-medium) {
      width: 100%;
    }
  }

  .file-page__secondary-content {
    padding: 0 var(--spacing-s);
    flex-direction: row;

    @media (max-width: $breakpoint-medium) {
      flex-direction: column;
    }
  }

  .file-page__recommended {
    margin-top: 10px;
  }
}

.main--livestream {
  @extend .main--file-page;

  @media (min-width: 1750px) {
    padding: 0;
    width: 100%;
    max-width: var(--page-max-width--filepage);
    position: relative;
    display: grid;
    grid-template-columns: 1fr minmax(0, var(--livestream-comments-width));
    justify-content: space-between;
    justify-items: end;
    gap: var(--spacing-m);

    .livestream__chat {
      margin: 0 !important;
    }
  }

  .card-stack {
    margin-bottom: var(--spacing-m);

    @media (max-width: $breakpoint-medium) {
      max-width: none;
    }

    @media (max-width: $breakpoint-small) {
      .help--notice {
        margin: var(--spacing-xs);
        margin-top: var(--spacing-xs);
        margin-bottom: var(--spacing-xs);
      }
    }
  }

  .card__body {
    .date_time {
      font-size: var(--font-small);
    }
  }

  @media (max-width: $breakpoint-medium) {
    padding: 0 var(--spacing-s);

    .card__main-actions {
      .claim-preview__wrapper {
        a {
          .button__content {
            align-items: unset;
          }
        }
      }
    }
  }

  @media (max-width: $breakpoint-small) {
    padding: 0;

    .card {
      margin: 0;
      .card__first-pane {
        .card__main-actions {
          .claim-preview {
            align-items: unset;
          }
        }
      }
    }

    .card-stack {
      margin: 0;
    }
  }

  @media (min-width: $breakpoint-small) and (max-width: $breakpoint-medium) {
    padding: 0 var(--spacing-m);
  }
}

.main--full-width {
  @extend .main;
  max-width: none;
}

.main--popout-chat {
  @extend .main;
  margin: 0 !important;
  padding: 0 !important;
  width: 100vw !important;
  height: 100vh !important;
}

.main--auth-page {
  width: 100%;
  max-width: 70rem;
  margin-left: auto;
  margin-right: auto;
  padding: 0 var(--spacing-s);

  @media (min-width: $breakpoint-small) {
    margin-top: var(--spacing-main-padding);
    padding: 0 var(--spacing-l);
  }
}
/* ... */

